# satisfactory_solver_4

./: Cargo.toml
recipes/: test_recipes.json
src/: drag_plane.rs  factory_world.rs  main.rs  recipe_json.rs  recipe_ui.rs
src/factory/: factory.rs  mod.rs  recipe_json.rs  world.rs
