[package]
name = "factory_solver_3"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15"
serde = "1.0"
serde_json = "1.0"
rfd = "0.15.3"
